--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "themes/fuji"]
 	path = themes/fuji
 	url = git@github.com:Reki-code/hugo-theme-fuji.git
+[submodule "themes/hugo-bearblog"]
+	path = themes/hugo-bearblog
+	url = git@github.com:janraasch/hugo-bearblog.git
