--- a/.github/workflows/hugo-deploy.yaml
+++ b/.github/workflows/hugo-deploy.yaml
@@ -36,9 +36,12 @@ jobs:
       - name: Build
         run: hugo --minify
 
+      - name: Create cname file
+        run: echo 'rekii.me' > public/CNAME
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
-          github_token: ${{ secrets.HUGO_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
